initial functioning app
